syntax = "proto3";
//import  "google/protobuf/timestamp.proto";
//import public "google/protobuf/timestamp.proto";
package pb;
option go_package = "./pb";

message ListRequest {
  int64 page = 1;
  int64 pageSize = 2;
}
message CategoryInfoResponse {
  int64 id = 1;
  string name = 2;
}
message ListResponse {
  int64 total = 1;
  repeated GoodsInfoResponse data = 2;
}
message GoodsInfoResponse {
  int64 id = 1;
  int64 categoryId = 2;
  string goodsName = 3;
  string goodsDetail = 4;
  int64 clickNum = 5;
  int64 soldNum = 6;
  int64 favNum = 7;
  float marketPrice = 8;
  float shopPrice = 9;
  string goodsBrief = 10;
  int64 shipFree = 11;
  int64 isNew = 12;
  int64 isHot = 13;
  int64 onSale = 14;
  int64 createTime = 15;
  CategoryInfoResponse category = 16;
}
message DetailRequest {
  int64 ID = 1;
}
service goods {
  rpc List(ListRequest) returns (ListResponse);
  rpc Detail(DetailRequest) returns (GoodsInfoResponse);
}